fix(sidebar): header overflow

--- a/src/app/floating-ui/floating-ui.component.scss
+++ b/src/app/floating-ui/floating-ui.component.scss
@@ -139,4 +139,5 @@ app-geocoder {
   top: 0;
   z-index: 10;
   background: white;
+  margin-bottom: 0.5rem;
 }
